--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                     <div class="stat-label">Технологий</div>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">Junior</span>
+                    <span class="stat-number">Experienced</span>
                     <div class="stat-label">Backend Разработчик</div>
                 </div>
             </div>
